<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
        <menu>
            <item android:id="@+id/menu_priorities_high"
                android:title="@string/priorities_high"/>
            <item android:id="@+id/menu_priorities_medium"
                android:title="@string/priorities_medium"/>
            <item android:id="@+id/menu_priorities_low"
                android:title="@string/priorities_low"/>
        </menu>
        </item>
    </group>

    <item android:id="@+id/delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
</menu>